--- a/src/testes/CMakeLists.txt
+++ b/src/testes/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(
 )
 
 target_link_libraries(TesteUnitario gtest_main)
+target_include_directories(TesteUnitario PRIVATE ${FW_SOURCE_DIR})
 
 install(
     TARGETS TesteUnitario
