criar parser de arquivo

--- a/src/testes/CMakeLists.txt
+++ b/src/testes/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(
 add_executable(
     TesteUnitario
     "abb_test.cpp"
+    "file_parser_test.cpp"
 )
 
 target_link_libraries(TesteUnitario gtest_main)
