--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 project(ufc_eda_persistencia)
 
+option(BUILD_UNIT_TESTS "Build unit tests using gtest framework, requires C++17" ON)
 set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/exeobj_cmake")
 set(FW_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
 
@@ -8,7 +9,9 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
-add_subdirectory(src/testes)
+if (BUILD_UNIT_TESTS)
+    add_subdirectory(src/testes)
+endif()
 
 add_executable(
     cli
